--- a/packages/hexon-web/src/components/HIcon.stories.mdx
+++ b/packages/hexon-web/src/components/HIcon.stories.mdx
@@ -28,10 +28,10 @@ import HIcon from "./HIcon.vue";
       template: `
 <HIcon>
   <Search16Filled />
-</HIcon>&nbsp;
+</HIcon>
 <HIcon>
   <Add16Filled />
-</HIcon>&nbsp;
+</HIcon>
 <HIcon>
   <Edit16Filled />
 </HIcon>
@@ -51,10 +51,10 @@ import HIcon from "./HIcon.vue";
       template: `
 <HIcon>
   <Search16Filled />
-</HIcon>&nbsp;
+</HIcon>
 <HIcon size="1.5em">
   <Add16Filled />
-</HIcon>&nbsp;
+</HIcon>
 <HIcon size="2em">
   <Edit16Filled />
 </HIcon>
@@ -75,12 +75,12 @@ import HIcon from "./HIcon.vue";
 <span style="color:red">
   <HIcon>
     <Search16Filled />
-  </HIcon>&nbsp;
+  </HIcon>
 </span>
 <span style="color:green">
   <HIcon>
     <Add16Filled />
-  </HIcon>&nbsp;
+  </HIcon>
 </span>
 <span style="color:blue">
   <HIcon>
