feat(web): h-input

--- a/packages/hexon-web/src/components/HIcon.stories.mdx
+++ b/packages/hexon-web/src/components/HIcon.stories.mdx
@@ -50,7 +50,7 @@ import HIcon from "./HIcon.vue";
       components: { HIcon, Search16Filled, Add16Filled, Edit16Filled },
       template: `
 <HIcon>
-  <Search16Filled />
+  <Search16Filled size="1em"/>
 </HIcon>
 <HIcon size="1.5em">
   <Add16Filled />
