feat(web): 添加颜色类型

--- a/packages/hexon-web/src/components/HButton.stories.mdx
+++ b/packages/hexon-web/src/components/HButton.stories.mdx
@@ -49,7 +49,7 @@ import HIcon from "./HIcon.vue";
     {() => ({
       components: { HButton },
       template: `
-<div style="padding:20px; background-color: gray;">
+<div style="padding:20px;">
   <HButton type="primary" inverted>primary</HButton>&nbsp;
   <HButton type="success" inverted>success</HButton>&nbsp;
   <HButton type="warning" inverted>warning</HButton>&nbsp;
